--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="My online persona, which combines a résumé and portfolio to provide a concise overview about me!">
     <meta name="keywords" content="Resume, Portfolio">
     <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/human-resources-29/66/5-128.png">
-    <title>Name | Digital Resume</title>
+    <title>Deepanshu Sharma | Digital Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -35,7 +35,7 @@
             <!-- Profile -->
             <div class="bg-white p-6 rounded-lg shadow-md text-center">
                 <img src="https://cdn.pixabay.com/photo/2016/04/22/04/57/graduation-1345143_1280.png" alt="Profile Picture" class="w-32 h-32 mx-auto rounded-full border-4 border-gray-600 prevent-right-click" />
-                <h1 class="text-2xl font-bold mt-4">Your Name</h1>
+                <h1 class="text-2xl font-bold mt-4">Deepanshu Sharma</h1>
                 <h2 class="text-lg text-blue-600">Your Title</h2>
             </div>
             <!-- Personal Info -->
