--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -826,11 +826,163 @@
         </div>
     </footer>
 
+    <!-- Particles Container for Futuristic Effect -->
+    <div class="particles-container" id="particlesContainer"></div>
+
+    <!-- Cursor Trail Container -->
+    <div id="cursorTrail"></div>
+
     <!-- Toast Notification -->
     <div class="toast-container" id="toastContainer"></div>
 
     <!-- Scripts -->
     <script src="pdf-tools.js"></script>
+
+    <!-- Futuristic Interactive Effects -->
+    <script>
+        // Particle System
+        function createParticles() {
+            const container = document.getElementById('particlesContainer');
+            if (!container) return;
+
+            const particleCount = 50;
+
+            for (let i = 0; i < particleCount; i++) {
+                const particle = document.createElement('div');
+                particle.className = 'particle';
+                particle.style.left = Math.random() * 100 + '%';
+                particle.style.animationDelay = Math.random() * 15 + 's';
+                particle.style.animationDuration = (15 + Math.random() * 20) + 's';
+
+                // Random colors between cyan and magenta
+                const hue = Math.random() > 0.5 ? 180 : 300;
+                particle.style.background = `hsl(${hue}, 100%, 50%)`;
+                particle.style.boxShadow = `0 0 ${10 + Math.random() * 20}px hsl(${hue}, 100%, 50%)`;
+                particle.style.width = (2 + Math.random() * 4) + 'px';
+                particle.style.height = particle.style.width;
+
+                container.appendChild(particle);
+            }
+        }
+
+        // Cursor Trail Effect
+        function setupCursorTrail() {
+            const trailContainer = document.getElementById('cursorTrail');
+            if (!trailContainer) return;
+
+            const trailLength = 20;
+            const trail = [];
+
+            for (let i = 0; i < trailLength; i++) {
+                const dot = document.createElement('div');
+                dot.style.cssText = `
+                    position: fixed;
+                    width: ${12 - i * 0.5}px;
+                    height: ${12 - i * 0.5}px;
+                    background: radial-gradient(circle, 
+                        rgba(0, 245, 255, ${1 - i * 0.05}) 0%, 
+                        rgba(255, 0, 255, ${0.5 - i * 0.025}) 100%);
+                    border-radius: 50%;
+                    pointer-events: none;
+                    z-index: 9998;
+                    opacity: ${1 - i * 0.05};
+                    transition: transform 0.1s ease;
+                    transform: translate(-50%, -50%);
+                    box-shadow: 0 0 ${10 - i * 0.5}px rgba(0, 245, 255, ${0.5 - i * 0.025});
+                `;
+                trailContainer.appendChild(dot);
+                trail.push({ element: dot, x: 0, y: 0 });
+            }
+
+            let mouseX = 0, mouseY = 0;
+
+            document.addEventListener('mousemove', (e) => {
+                mouseX = e.clientX;
+                mouseY = e.clientY;
+            });
+
+            function animateTrail() {
+                let x = mouseX;
+                let y = mouseY;
+
+                trail.forEach((dot, index) => {
+                    const nextX = index === 0 ? x : trail[index - 1].x;
+                    const nextY = index === 0 ? y : trail[index - 1].y;
+
+                    dot.x += (nextX - dot.x) * 0.35;
+                    dot.y += (nextY - dot.y) * 0.35;
+
+                    dot.element.style.left = dot.x + 'px';
+                    dot.element.style.top = dot.y + 'px';
+                });
+
+                requestAnimationFrame(animateTrail);
+            }
+
+            animateTrail();
+        }
+
+        // Interactive Light Effect
+        function setupLightEffect() {
+            const light = document.createElement('div');
+            light.id = 'interactiveLight';
+            light.style.cssText = `
+                position: fixed;
+                width: 400px;
+                height: 400px;
+                background: radial-gradient(circle, 
+                    rgba(0, 245, 255, 0.15) 0%, 
+                    rgba(255, 0, 255, 0.1) 30%, 
+                    transparent 70%);
+                border-radius: 50%;
+                pointer-events: none;
+                z-index: -1;
+                transform: translate(-50%, -50%);
+                transition: opacity 0.3s ease;
+                filter: blur(40px);
+            `;
+            document.body.appendChild(light);
+
+            document.addEventListener('mousemove', (e) => {
+                light.style.left = e.clientX + 'px';
+                light.style.top = e.clientY + 'px';
+            });
+        }
+
+        // Magnetic Button Effect
+        function setupMagneticButtons() {
+            const buttons = document.querySelectorAll('.process-btn, .upload-btn, .tool-card');
+
+            buttons.forEach(btn => {
+                btn.addEventListener('mousemove', (e) => {
+                    const rect = btn.getBoundingClientRect();
+                    const x = e.clientX - rect.left - rect.width / 2;
+                    const y = e.clientY - rect.top - rect.height / 2;
+
+                    btn.style.transform = `
+                        translateY(-12px) 
+                        rotateX(${-y / 10}deg) 
+                        rotateY(${x / 10}deg) 
+                        scale(1.02)
+                    `;
+                });
+
+                btn.addEventListener('mouseleave', () => {
+                    btn.style.transform = '';
+                });
+            });
+        }
+
+        // Initialize Effects
+        document.addEventListener('DOMContentLoaded', () => {
+            createParticles();
+            setupCursorTrail();
+            setupLightEffect();
+
+            // Delay magnetic buttons to allow page to fully load
+            setTimeout(setupMagneticButtons, 1000);
+        });
+    </script>
 </body>
 
 </html>
