Add Resume Builder tool with 6 templates, live preview, and PDF export

--- a/index.html
+++ b/index.html
@@ -566,6 +566,60 @@
         </div>
     </section>
 
+    <!-- Student & Professional Tools -->
+    <section class="services section" id="tools" style="background: linear-gradient(135deg, #F0FDF4 0%, #ECFDF5 100%);">
+        <div class="container">
+            <div class="section-header fade-in">
+                <h2>🎓 Student & Professional Tools</h2>
+                <div class="divider"></div>
+                <p>Free Tools to Boost Your Career</p>
+            </div>
+
+            <div class="services-grid" style="max-width: 900px; margin: 0 auto;">
+                <!-- Resume Builder -->
+                <a href="resume-builder.html" class="service-card fade-in"
+                    style="text-decoration: none; cursor: pointer; transition: all 0.3s;">
+                    <div class="service-icon" style="background: linear-gradient(135deg, #10B981, #059669);">
+                        <i class="fas fa-file-alt"></i>
+                    </div>
+                    <h3 style="color: var(--text-primary);">Resume Builder</h3>
+                    <p>Create stunning, ATS-friendly resumes in minutes. 6 professional templates, real-time preview,
+                        instant PDF download.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-check"></i>6+ Professional Templates</li>
+                        <li><i class="fas fa-check"></i>Real-time Live Preview</li>
+                        <li><i class="fas fa-check"></i>PDF Export</li>
+                        <li><i class="fas fa-check"></i>100% Free</li>
+                    </ul>
+                    <span class="service-link">Create Resume <i class="fas fa-arrow-right"></i></span>
+                </a>
+
+                <!-- More tools coming soon -->
+                <div class="service-card fade-in" style="opacity: 0.7;">
+                    <div class="service-icon" style="background: linear-gradient(135deg, #6366F1, #4F46E5);">
+                        <i class="fas fa-file-contract"></i>
+                    </div>
+                    <h3>Cover Letter Builder</h3>
+                    <p>Create compelling cover letters that complement your resume. AI-assisted writing suggestions.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-clock"></i>Coming Soon</li>
+                    </ul>
+                </div>
+
+                <div class="service-card fade-in" style="opacity: 0.7;">
+                    <div class="service-icon" style="background: linear-gradient(135deg, #F59E0B, #D97706);">
+                        <i class="fas fa-id-card"></i>
+                    </div>
+                    <h3>Portfolio Generator</h3>
+                    <p>Build a professional portfolio website to showcase your work and skills.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-clock"></i>Coming Soon</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Process Section -->
     <section class="process section">
         <div class="container">
