Add 4 new templates (Academic, Designer, Healthcare, Sales) - now 10 total

--- a/resume-builder.html
+++ b/resume-builder.html
@@ -52,7 +52,7 @@
                 <p>Create stunning, ATS-friendly resumes with our easy-to-use builder. Choose from 6 professional
                     templates, customize every detail, and download as PDF instantly.</p>
                 <div class="rb-stats">
-                    <div class="rb-stat"><span>6+</span> Templates</div>
+                    <div class="rb-stat"><span>10+</span> Templates</div>
                     <div class="rb-stat"><span>100%</span> Free</div>
                     <div class="rb-stat"><span>ATS</span> Optimized</div>
                 </div>
@@ -67,6 +67,8 @@
     <section class="rb-templates" id="templates">
         <div class="container">
             <h2><i class="fas fa-palette"></i> Choose Your Template</h2>
+            <p style="text-align: center; color: var(--rb-text-light); margin-bottom: 2rem;">10 Professional Templates •
+                ATS-Optimized • Industry-Specific Designs</p>
             <div class="template-grid">
                 <div class="template-card active" data-template="modern" onclick="selectTemplate('modern')">
                     <div class="template-preview modern-preview"></div>
@@ -92,6 +94,27 @@
                 <div class="template-card" data-template="tech" onclick="selectTemplate('tech')">
                     <div class="template-preview tech-preview"></div>
                     <h4>Tech</h4>
+                    <span class="template-badge" style="background:#10B981;">Developer</span>
+                </div>
+                <div class="template-card" data-template="academic" onclick="selectTemplate('academic')">
+                    <div class="template-preview academic-preview"></div>
+                    <h4>Academic</h4>
+                    <span class="template-badge" style="background:#6366F1;">Scholar</span>
+                </div>
+                <div class="template-card" data-template="designer" onclick="selectTemplate('designer')">
+                    <div class="template-preview designer-preview"></div>
+                    <h4>Designer</h4>
+                    <span class="template-badge" style="background:#EC4899;">Creative</span>
+                </div>
+                <div class="template-card" data-template="healthcare" onclick="selectTemplate('healthcare')">
+                    <div class="template-preview healthcare-preview"></div>
+                    <h4>Healthcare</h4>
+                    <span class="template-badge" style="background:#14B8A6;">Medical</span>
+                </div>
+                <div class="template-card" data-template="sales" onclick="selectTemplate('sales')">
+                    <div class="template-preview sales-preview"></div>
+                    <h4>Sales</h4>
+                    <span class="template-badge" style="background:#F59E0B;">Business</span>
                 </div>
             </div>
         </div>
