Add 4 corporate resume templates: MBA, Consultant, Executive, Ivy League

--- a/resume-builder.html
+++ b/resume-builder.html
@@ -54,7 +54,7 @@
                 <p>Create stunning, ATS-friendly resumes with our easy-to-use builder. Choose from 6 professional
                     templates, customize every detail, and download as PDF instantly.</p>
                 <div class="rb-stats">
-                    <div class="rb-stat"><span>14+</span> Templates</div>
+                    <div class="rb-stat"><span>18+</span> Templates</div>
                     <div class="rb-stat"><span>100%</span> Free</div>
                     <div class="rb-stat"><span>ATS</span> Optimized</div>
                 </div>
@@ -139,6 +139,27 @@
                     <div class="template-preview photo-professional-preview"></div>
                     <h4>Photo Pro</h4>
                     <span class="template-badge" style="background:#3B82F6;">With Photo</span>
+                </div>
+                <!-- Corporate Templates -->
+                <div class="template-card" data-template="mba" onclick="selectTemplate('mba')">
+                    <div class="template-preview mba-preview"></div>
+                    <h4>MBA / Finance</h4>
+                    <span class="template-badge" style="background:#0F172A;">Top Tier</span>
+                </div>
+                <div class="template-card" data-template="consultant" onclick="selectTemplate('consultant')">
+                    <div class="template-preview consultant-preview"></div>
+                    <h4>Consultant</h4>
+                    <span class="template-badge" style="background:#86EFAC; color:#064E3B;">Deloitte Style</span>
+                </div>
+                <div class="template-card" data-template="executive" onclick="selectTemplate('executive')">
+                    <div class="template-preview executive-corp-preview"></div>
+                    <h4>Executive</h4>
+                    <span class="template-badge" style="background:#60A5FA;">KPMG Style</span>
+                </div>
+                <div class="template-card" data-template="ivy" onclick="selectTemplate('ivy')">
+                    <div class="template-preview ivy-preview"></div>
+                    <h4>Ivy League</h4>
+                    <span class="template-badge" style="background:#1C1917;">Harvard Style</span>
                 </div>
             </div>
         </div>
