Enhance Resume Score with detailed breakdown tooltip

--- a/resume-builder.html
+++ b/resume-builder.html
@@ -428,6 +428,14 @@
                                 <div
                                     style="font-size: 0.8em; font-weight: 600; color: var(--rb-text); display: none; @media(min-width: 1024px){display:block;}">
                                     Score</div>
+
+                                <!-- Tooltip -->
+                                <div class="score-tooltip" id="scoreTooltip">
+                                    <div
+                                        style="font-weight: bold; margin-bottom: 5px; border-bottom: 1px solid var(--rb-border); padding-bottom: 5px;">
+                                        AI Score Analysis</div>
+                                    <!-- Items injected by JS -->
+                                </div>
                             </div>
 
                             <select id="colorTheme" onchange="changeColorTheme()">
